<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/menu_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
